<resources>
    <string name="app_name">PT: All Pro</string>
    <string name="icon_name" translatable="false">PT: All Pro</string>
    <string name="app_description" translatable="false">*Apps multitude lead to clutter on the phone, how about one full-featured app that offers you:
\n1️⃣ Alarm Clock ⏰⏰
\n2️⃣ Gallery 🌄🎞️
\n3️⃣ File manager 📁📂
\n4️⃣ Music player 🎧🎼
\n5️⃣ Phone Dialer 📱📞
\n6️⃣ Notepad with Counter 🗒️🗓️
\n7️⃣Screen Recorder app and screenshot ⏺️📱
\n
\n*ABSOLUTE PRIVACY
\n"PT: All Pro" doesn\'t contain tracking or any ads or collect any information back to its developer or any third party.
\n*This App require Full Access Permission For storage
\n
\nPT: Music Player 🎧🎼
\n- Offline Free song player app for Android
\n- For next level music listening experience
\n- Music makes you happy and "off the ground", is Song Player supposed to be "off the screen"?
\n- "PT: Music Player" completely out of application - play songs in the background - with cool UI
\n- Change tracks, song play, play album or artist tracks while you play games or scrolling in social media apps without return to App
\n- Create and save your Playlist
\n- Play tracks in sequence or shuffle
\n- Play songs by artist, album, or playlist
\n- Quick Settings icon in Notification Bar *Pro version*
\n- Lock screen player for easy music controller when your MP3 player is playing
\n
\nPT: Phone Dialer 📱📞
\n- App provides a Default Phone handler as Dialer
\n- Phone dialer for your Android phone, powered with Smart Contacts Search, Call Log History
\n- immediately Listing all Contact and Log details while scrolling ,including Social Conversation\'s Contact
\n- Replace your stock phone App and take your phone dialling experience to the next level.
\n
\nPT: Gallery: 🌄🎞️
\n-  Movies in the - picture-in-picture - overlay feature
\n- Gallery contains "Pending table" for choosing media from any folder for sharing, editing and anything else
\n- Now Easily share / delete / hide / copy and cut photos and videos / add to favourites / resort *Pro version* ,.. etc
\n- Change the device volume, brightness and rotation from the application
\n*Pro version*
\n- Search the entire gallery not just one folder
\n- Easily filter photos and videos to find it faster with premium UI
\n- You can extract text from images via OCR - text free scanner -
\n
\nPT: File Manager 📁📂
\n- Main files as categories: Images / Videos / Audio / Documents / and Archives
\n- As you browse in the device storage freely with premium UI
\n- Free File explorer allows to change track tags and Cover
\n- PT: File Manager gives you a feature like PDF Reader - Internal photo viewer - offline
\n- PDF Viewer have fast scroll button and you can Change slides Orientation individually
\nMP3 player - mp4 movies player - pending table - hide items - open as - add to favourites - resort *Pro version*,.. etc
\n- Create new folder and Copy files to the new folder is good for organise, but bad for Device Storage , you can create Virtual Folder and add any files and folders you want *Pro version*
\n
\nPT: Alarm clock ⏰⏰
\n- Set alarm time by two different ways - both convenient - choose what you want "Circle Clock or Spinner"
\n- One way to stop ringing gets boring over time and ineffective
\n- "PT: Alarm clock" offer four different ways: Single swipe, Double swipe *Pro version*, Single click, Shake Device
\n- Set alarm ringtone, vibration activation , background *Pro version* and Repetition(Optional)
\n- Record a voice that makes you happy to wake up to play it after the ringtone *Pro version*
\n
\nPT: Overlay ⏺️📱
\n- PT: Overlay presents Floating Head for screen recorder app with audio, Open app more easier and faster, screenshot - full page screen capture
\n- Navigation Ball for change brightness and sound level
\n- Just one swipe in for start Free Screen Recorder App or full page screen capture
\n
\nPT: Notepad 🗒️🗓️
\n- To keep save all notes and data organised , secure and not annoying
\n- Whatever you can imagine to keep save, Like a photo, recording web link, email , OCR Text
\n- choose a date to notify by a note if you want
\n*Pro version*
\n- you can filter by note type and month or day with calendar
\n- you don\'t need keep many photos for its text , Notepad contains "PT: OCR" for text free extraction
    </string>
    <string name="c">C</string>
    <string name="dt">Confirm Delete Item</string>
    <string name="dc">Are you sure you would like to delete this item?</string>
    <string name="ys">Yes</string>
    <string name="no">No</string>
    <string name="sv">save</string>
    <string name="ad">add</string>
    <string name="cr">Counter</string>
    <string name="ed">Edit Alarm</string>
    <string name="al">Add Alarm</string>
    <string name="d4">Alarm Deleted</string>
    <string name="sm">Set Alarm</string>
    <string name="rp">Repeating</string>
    <string name="d1">Delete</string>
    <string name="r9">Ringtone</string>
    <string name="ss">Screenshot</string>
    <string name="sr">Screen Record</string>
    <string name="hq">High Quality</string>
    <string name="mq">Medium Quality</string>
    <string name="py">No Images on this device</string>
    <string name="pp">Properties</string>
    <string name="st">Select All</string>
    <string name="rm">Rename</string>
    <string name="pd">Add To Clipboard</string>
    <string name="pt">Add To Pending Table</string>
    <string name="na">Name</string>
    <string name="dm">Dimensions</string>
    <string name="df">Last Modified</string>
    <string name="sz">Size</string>
    <string name="im">Selected Items</string>
    <string name="tz">Total Size</string>
    <string name="ph">Location</string>
    <string name="cg">Copy</string>
    <string name="mg">Move</string>
    <string name="nn">New Name</string>
    <string name="zr">00:00</string>
    <string name="sa">set as</string>
    <string name="p1">share</string>
    <string name="bg">Background</string>
    <string name="io">Important</string>
    <string name="ur">Link</string>
    <string name="rb">Remember</string>
    <string name="dd">Dark Mode</string>
    <string name="vb">Vibration</string>
    <string name="se">Save</string>
    <string name="rd">Image Renamed</string>
    <string name="co">Close</string>
    <string name="er">Enter</string>
    <string name="aw">Alarm will ring after</string>
    <string name="pf">Please grant external storage permission</string>
    <string name="dn">Done</string>
    <string name="gis">S</string>
    <string name="tm">PT: Screen capture</string>
    <string name="tg">PT: Alarm</string>
    <string name="rg">PT: Gallery</string>
    <string name="md">Mon</string>
    <string name="td">Tues</string>
    <string name="wd">Wed</string>
    <string name="ts">Thur</string>
    <string name="fd">Fri</string>
    <string name="sy">Sat</string>
    <string name="su">Sun</string>
    <string name="wk">M Tu W Th F Sa Su</string>
    <string name="gt">Get</string>
    <string name="up">Up</string>
    <string name="bz">00:00:00</string>
    <string name="ao">Audio</string>
    <string name="ac">Alarm Canceled</string>
    <string name="rf">PT: Screen Record Finished</string>
    <string name="rs">PT: Screen Record Started</string>
    <string name="sh">PT: Screenshot</string>
    <string name="cl">Floating Video Closed</string>
    <string name="ap">Picture Added To Pending Table</string>
    <string name="uy">Unable to play</string>
    <string name="ps">Images</string>
    <string name="ro">Records</string>
    <string name="tp">Text copied</string>
    <string name="d5">Screencast Permission Denied</string>
    <string name="cf">Choose Notification Time</string>
    <string name="nd">Notification Added</string>
    <string name="pe">Pending Table is empty</string>
    <string name="si">Select Image</string>
    <string name="hn">Simple Alarm</string>
    <string name="hc">Notification</string>
    <string name="le">Screen Capture</string>
    <string name="dj">Days</string>
    <string name="ks">Tags</string>
    <string name="vk">Invalid Link</string>
    <string name="yn">Enter Your Name</string>
    <string name="un">UserName</string>
    <string name="op">No Editor App Found</string>
    <string name="yt">Theme</string>
    <string name="gl">General</string>
    <string name="am">Alarm</string>
    <string name="vt">Interval Minutes</string>
    <string name="zt">Snooze Minutes</string>
    <string name="ta">Start</string>
    <string name="l4">Lap</string>
    <string name="s6">Stop</string>
    <string name="rt">Reset</string>
    <string name="xt">PT: Extra</string>
    <string name="rv">Video is Renamed</string>
    <string name="ma">PT: Missed Alarm</string>
    <string name="ms">Missed Alarm</string>
    <string name="pl">You have a missed alarm in </string>
    <string name="t3">Ringing times</string>
    <string name="vi">Increase the volume every</string>
    <string name="gw"> was ringing for </string>
    <string name="fi">Failed to load Image</string>
    <string name="qk">Start Record</string>
    <string name="y1">day and</string>
    <string name="y5">days and</string>
    <string name="tv">PT: Floating Video</string>
    <string name="fv">Floating Video</string>
    <string name="a6">Floating Video provider</string>
    <string name="ax">loading..</string>
    <string name="z6">Link copied</string>
    <string name="ry">Gallery</string>
    <string name="ca">Columns count</string>
    <string name="zu">High resolution grid pictures</string>
    <string name="mu">minute</string>
    <string name="us">minutes</string>
    <string name="i1">time</string>
    <string name="i5">times</string>
    <string name="ns">seconds</string>
    <string name="r3">(Repeated Alarm)</string>
    <string name="hp">Assistive Head</string>
    <string name="pc">Assistive Head provider for Apps and Navigation</string>
    <string name="ix">Please grant permission of mic</string>
    <string name="or">must enable device administrator</string>
    <string name="xp">Unable to export database.</string>
    <string name="px">No file explorer apps found.</string>
    <string name="mp">import database Successful</string>
    <string name="la">Unable to import all database. Retry</string>
    <string name="ui">Unable to import database. Retry</string>
    <string name="mr">Please,Use a official file manager</string>
    <string name="ud">Undo</string>
    <string name="s4">added to done list</string>
    <string name="fk">removed from done list</string>
    <string name="mt">item is deleted</string>
    <string name="dr">Reload</string>
    <string name="f7">Media folder is needed to save images and videos</string>
    <string name="rl">Floating window Permission denied</string>
    <string name="pr">Please grant the required permissions</string>
    <string name="pv">Back Up</string>
    <string name="bw">Do you want to backup data?</string>
    <string name="bu">something you bought</string>
    <string name="pm">price</string>
    <string name="cx">Create New Folder</string>
    <string name="za">folder name</string>
    <string name="ir">Internal</string>
    <string name="jr">Virtual</string>
    <string name="to">To :</string>
    <string name="bj">Subject :</string>
    <string name="m9">Email :</string>
    <string name="qp">Email</string>
    <string name="cq">Compress Photos</string>
    <string-array name="dv">
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>
    <string name="dh">Date Ascending</string>
    <string name="eb">Date Descending</string>
    <string name="nf">Name Ascending</string>
    <string name="bd">Name Descending</string>
    <string name="vf">Size Ascending</string>
    <string name="ey">Size Descending</string>
    <string name="mc">Folder</string>
    <string name="lj">File</string>
    <string name="zn">Note</string>
</resources>