<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/rmoBackHint"
    app:cardCornerRadius="25dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/inputCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/linear_divider"
            app:dividerPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showDividers="middle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/toEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:hint="@string/to"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:textColor="?attr/rmoText"
                android:textColorHint="?attr/rmoGrey"
                android:textSize="@dimen/txt" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:hint="@string/bj"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="?attr/rmoText"
                android:textColorHint="?attr/rmoGrey"
                android:textSize="@dimen/txt" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:hint="@string/m9"
                android:inputType="text"
                android:textColor="?attr/rmoText"
                android:textColorHint="?attr/rmoGrey"
                android:textSize="@dimen/txt" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/ripple_cur"
            android:paddingStart="18dp"
            android:paddingTop="5dp"
            android:paddingEnd="18dp"
            android:paddingBottom="3dp"
            android:text="@string/er"
            android:textColor="?attr/rmoText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCreate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_cur"
            android:paddingStart="18dp"
            android:paddingTop="5dp"
            android:paddingEnd="18dp"
            android:paddingBottom="3dp"
            android:text="@string/co"
            android:textColor="?attr/rmoText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okPro"
            app:layout_constraintTop_toBottomOf="@+id/inputCreate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
