<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardBackgroundColor="?attr/rmoBackHint"
        app:cardCornerRadius="@dimen/card_fixed_large"
        app:cardElevation="5dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="false"
            android:overScrollMode="never">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/dataColorSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fre"
                            android:text="@string/zn"
                            android:textAllCaps="false" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/importantColorSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fre"
                            android:text="@string/io"
                            android:textAllCaps="false" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/linkColorSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fre"
                            android:text="@string/ur"
                            android:textAllCaps="false" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/rememberColorSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fre"
                            android:text="@string/rb"
                            android:textAllCaps="false" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/mailColorSet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fre"
                            android:text="@string/qp"
                            android:textAllCaps="false" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </HorizontalScrollView>

                <com.pt.common.moderator.recycler.RecyclerForViews
                    android:id="@+id/recyclerDataColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="80dp"
                        android:text="@string/cq"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="?attr/rmoText"
                        android:textSize="@dimen/txt" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/photoCompress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="30dp"
                        android:contentDescription="@string/cq"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:scaleX="@dimen/s10"
                        android:scaleY="@dimen/s10" />

                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="80dp"
                        android:text="@string/dv"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="?attr/rmoText"
                        android:textSize="@dimen/txt" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/includeDone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="30dp"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:scaleX="@dimen/s10"
                        android:scaleY="@dimen/s10" />

                </FrameLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</FrameLayout>